2002-04-12  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/bin2hex.pl: Set output header files to be "static const
	char" instead of plain char. Should prevent some clobbering,
	e.g. PR #543314.

	* src/aromatic.h, src/atomtyp.h, src/element.h, src/extable.h,
	src/phmodeldata.h, src/resdata.h, src/types.h: Generate as above.

	* src/aromatic.txt, src/atomtyp.txt, src/phmodel.txt: Change
	"OELib" in headers to "Open Babel."

	* src/data.h: Make all _dataptr members "const char" and set
	ParseLine() methods to operate on const char*.

	* src/data.cpp, src/pdb.cpp, src/phmodel.cpp, src/rotor.cpp,
	src/typer.cpp: As above.

	* src/mol.h: Set tokenize() declarations to operate on const
	char*.

	* src/tokenst.cpp: As above.

2002-04-05  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/parsmart.cpp: Added some defensive programming when calling
	delete, also set the pointer to NULL.

	* src/parsmart.h: Add constructor and destructor to
	OBSmartsParser.

	* src/smarts.h: Add full destructors for OBEdge, OBNode.

	* src/smarts.cpp: As above. Should solve memory leaks, PR #508056.
	
2002-03-30  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/*.h: Update headers to use std:: namespace to refer to
	vectors, strings, pairs, streams, etc.

	* src/*.cpp: As a first stage in full namespace support, add a
	full "using namespace std;" (to be followed eventually with only
	importing the necessary namespace portions.
	
2002-03-27  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/cml.cpp: Fix use of strcmp() in code in favor of strncmp()
	to prevent buffer overflow. Fixes problems with 2D/3D export.
	
2002-03-26  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/cml.cpp: New CML support, including built-in XML parser,
	contributed by Peter Murray-Rust.

	* src/Makefile.in: Add cml.cpp to list to support CML compilation.

	* src/data.h, src/data.cpp: Add CML file type.

	* src/extable.txt, src/extable.h: Update to add in .cml files.
