@@ -1,3 +1,9 @@
+2002-04-16  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
+
+	* src/qchem.cpp: Fix conversion from internal coordinates at the
+	end of a geometry optimization (silly thinko, forgot to convert
+	from deg. to rad. for angles).
+
 2002-04-12  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
 
 	* src/bin2hex.pl: Set output header files to be "static const
